# fingraph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fingraph/: __init__.py  pipeline.py
src/fingraph/api/: app.py
src/fingraph/dashboard/: app.py
src/fingraph/data/: generate.py  generator.py  ibm_loader.py  run_benchmark.py  schema.py  sources.py
src/fingraph/detection/: evaluate.py  model.py  run_baseline.py
src/fingraph/explain/: investigate.py  reasons.py  run_investigation.py  summary.py
src/fingraph/features/: account_features.py
src/fingraph/graph/: build.py
src/fingraph/scoring/: propagation.py  run_scoring.py
tests/: conftest.py  test_api.py  test_detection.py  test_explain.py  test_features.py  test_generator.py  test_graph.py  test_pipeline.py  test_scoring.py
